# nih-plug-test

./: README.md
distorto/: Cargo.toml  README.md  bundler.toml
distorto/src/: dial.rs  lib.rs
distorto_no_gui/: Cargo.toml  README.md  bundler.toml
distorto_no_gui/src/: drive.rs  lib.rs
gain_gui_egui_test/: Cargo.toml  README.md  bundler.toml
gain_gui_egui_test/src/: main.rs.old
loudness_war_winner/: Cargo.toml  README.md  bundler.toml
nih_hello_world/: Cargo.toml  README.md  bundler.toml
nih_hello_world/src/: lib.rs
styling_egui/: Cargo.toml  README.md  bundler.toml
styling_egui/src/: dial2.rs  lib.rs  toggle_switch.rs
test_tone/: Cargo.toml  README.md  bundler.toml
test_tone/src/: drive.rs  lib.rs  waves.rs
using_webview/: Cargo.toml  README.md  bundler.toml
using_webview/src/: gui.html  lib.rs
using_webview_2/src/: gui.html  lib.rs
using_webview_2/src/ui/: package.json
